--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
           <div class="ghostKey"></div>
         </div>
       </div>
+
+      <!-- delay controller -->
+      <input type="range" id="delayFeedbackInput" min="0" max="1" step="0.01" />
+
+      <p id="meterOutput"></p>
     </div>
   </body>
 </html>
