--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <!-- Import our external library, Tone.js -->
     <!-- Note that unlike the other code files we want it to load before anything else so we don't include defer -->
     <script src="http://unpkg.com/tone"></script>
+    <!-- Import the JQuery and JQueryUI libraries, which enable dragging the pillars -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 
     <!-- Import our CSS stylesheets -->
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
 
     <!-- Import our JS files -->
@@ -24,7 +28,7 @@
     <!-- The last script handles connecting the UI to the synthesizer : this is where you'll be working -->
     <script src="UIControls.js" defer></script>
 
-    <title>Synth UI Exercise</title>
+    <title>Interactive Music Piece</title>
 
     <!-- favicon was sourced from favicon.io but the original graphics are copyright 2020 Twitter, Inc 
        and other contributors -->
@@ -46,53 +50,42 @@
       <button id="dialogCloseButton" autofocus>OK</button>
     </dialog>
 
-    <label for="tempB">Choose a frequency cutoff:</label><br />
+    <!-- pillars -->
+    <!-- the pillar-container divs hold the faces of the pillars. 
+     the wrappers hold these divs so that dragging them wont effect 
+     their 3D transforms. -->
 
-    <input
-      type="range"
-      id="frequencySlider"
-      min="0"
-      max="20000"
-      list="markers"
-    />
-
-    <datalist id="markers">
-      <option value="0" label="0 Hz"></option>
-      <option value="5000" label="5 kHz"></option>
-      <option value="10000" label="10 kHz"></option>
-      <option value="15000" label="15 kHz"></option>
-      <option value="20000" label="20 kHz"></option>
-    </datalist>
-
-    <!-- Keyboard Controller -->
-    <div class="keyboardCont">
-      <div class="octaveCont">
-        <div class="whiteKeyCont">
-          <button class="whiteKey" data-note="c"></button>
-          <button class="whiteKey" data-note="d"></button>
-          <button class="whiteKey" data-note="e"></button>
-          <button class="whiteKey" data-note="f"></button>
-          <button class="whiteKey" data-note="g"></button>
-          <button class="whiteKey" data-note="a"></button>
-          <button class="whiteKey" data-note="b"></button>
-        </div>
-        <div class="blackKeyCont">
-          <div class="ghostKey"></div>
-          <button class="blackKey" data-note="c#"></button>
-          <button class="blackKey" data-note="d#"></button>
-          <div class="ghostKey"></div>
-          <div class="ghostKey"></div>
-          <button class="blackKey" data-note="f#"></button>
-          <button class="blackKey" data-note="g#"></button>
-          <button class="blackKey" data-note="a#"></button>
-          <div class="ghostKey"></div>
-        </div>
+    <div class="pillar-wrapper" id="one">
+      <div class="pillar-container">
+        <div class="face front"></div>
+        <div class="face back"></div>
+        <div class="face right"></div>
+        <div class="face left"></div>
+        <div class="face top"></div>
+        <div class="face bottom"></div>
       </div>
+    </div>
 
-      <!-- delay controller -->
-      <input type="range" id="delayFeedbackInput" min="0" max="1" step="0.01" />
+    <div class="pillar-wrapper" id="two">
+      <div class="pillar-container">
+        <div class="face front"></div>
+        <div class="face back"></div>
+        <div class="face right"></div>
+        <div class="face left"></div>
+        <div class="face top"></div>
+        <div class="face bottom"></div>
+      </div>
+    </div>
 
-      <p id="meterOutput"></p>
+    <div class="pillar-wrapper" id="three">
+      <div class="pillar-container">
+        <div class="face front"></div>
+        <div class="face back"></div>
+        <div class="face right"></div>
+        <div class="face left"></div>
+        <div class="face top"></div>
+        <div class="face bottom"></div>
+      </div>
     </div>
   </body>
 </html>
