--- a/index.html
+++ b/index.html
@@ -87,5 +87,20 @@
         <div class="face bottom"></div>
       </div>
     </div>
+
+    <div class="diamond-wrapper">
+      <div class="diamond-container">
+        <div class="diamond fr"></div>
+        <div class="diamond ba"></div>
+        <div class="diamond ri"></div>
+        <div class="diamond le"></div>
+        <div class="diamond one"></div>
+        <div class="diamond two"></div>
+        <div class="diamond three"></div>
+        <div class="diamond four"></div>
+      </div>
+    </div>
+
+    <div class="sphere"></div>
   </body>
 </html>
