added extra faces to diamond

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 
     <div class="diamond-wrapper">
       <div class="diamond-container">
-        <div class="diamond fr"></div>
-        <div class="diamond ba"></div>
-        <div class="diamond ri"></div>
-        <div class="diamond le"></div>
-        <div class="diamond one"></div>
-        <div class="diamond two"></div>
-        <div class="diamond three"></div>
-        <div class="diamond four"></div>
+        <div class="facet one"></div>
+        <div class="facet two"></div>
+        <div class="facet three"></div>
+        <div class="facet four"></div>
+        <!-- <div class="facet five"></div>
+        <div class="facet six"></div>
+        <div class="facet seven"></div>
+        <div class="facet eight"></div> -->
       </div>
     </div>
 
