added diamond, interactions for diamond and sphere

--- a/index.html
+++ b/index.html
@@ -88,16 +88,19 @@
       </div>
     </div>
 
-    <div class="diamond-wrapper">
-      <div class="diamond-container">
+    <div class="dia-wrapper">
+      <div class="diamond up">
         <div class="facet one"></div>
         <div class="facet two"></div>
         <div class="facet three"></div>
         <div class="facet four"></div>
-        <!-- <div class="facet five"></div>
-        <div class="facet six"></div>
-        <div class="facet seven"></div>
-        <div class="facet eight"></div> -->
+      </div>
+
+      <div class="diamond down">
+        <div class="facet one"></div>
+        <div class="facet two"></div>
+        <div class="facet three"></div>
+        <div class="facet four"></div>
       </div>
     </div>
 
