changed styling for dialog window

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/Media/Guides/Autoplay -->
     <dialog id="introDialog">
       <p>
-        This synthesizer will make some noise, please check your system's volume
-        setting.
+        This interactive music piece will make some noise, please check your
+        system's volume setting. Play with the various objects to begin.
       </p>
       <button id="dialogCloseButton" autofocus>OK</button>
     </dialog>
