--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Import our external library, Tone.js -->
     <!-- Note that unlike the other code files we want it to load before anything else so we don't include defer -->
-    <script src="http://unpkg.com/tone"></script>
+    <script src="https://unpkg.com/tone"></script>
     <!-- Import the JQuery and JQueryUI libraries, which enable dragging the pillars -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
