Added glows and random snare

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <dialog id="introDialog">
       <p>
         This interactive music piece will make some noise, please check your
-        system's volume setting. Play with the various objects to begin.
+        system's volume setting. Play with the various objects to begin. Try
+        reloading the page to try different sounds.
       </p>
       <button id="dialogCloseButton" autofocus>OK</button>
     </dialog>
@@ -105,5 +106,7 @@
     </div>
 
     <div class="sphere"></div>
+    <!-- <div class="diamondGlow"></div> -->
+    <img src="./assets/glow.png" alt="glow" class="diamondGlow" />
   </body>
 </html>
